// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding boxes matches snapshot after adding box 1`] = `
<div>
  <div>
    <div>
      <form>
        <div>
          <label
            for="newBox-height"
          >
            Height
          </label>
          <input
            id="newBox-height"
            name="height"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-width"
          >
            Width
          </label>
          <input
            id="newBox-width"
            name="width"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-backgroundColor"
          >
            Background Color
          </label>
          <input
            id="newBox-backgroundColor"
            name="backgroundColor"
            value=""
          />
        </div>
        <button
          class="NewBoxForm-addBtn"
        >
          Add a new box!
        </button>
      </form>
    </div>
    <div
      class="Box"
    >
      <div
        class="Box-box"
        style="height: 2em; width: 3em; background-color: peachpuff;"
      />
      <button
        class="Box-removeBtn"
      >
        Remove The Box!
      </button>
    </div>
  </div>
</div>
`;

exports[`matches snapshot when no boxes 1`] = `
<div>
  <div>
    <div>
      <form>
        <div>
          <label
            for="newBox-height"
          >
            Height
          </label>
          <input
            id="newBox-height"
            name="height"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-width"
          >
            Width
          </label>
          <input
            id="newBox-width"
            name="width"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-backgroundColor"
          >
            Background Color
          </label>
          <input
            id="newBox-backgroundColor"
            name="backgroundColor"
            value=""
          />
        </div>
        <button
          class="NewBoxForm-addBtn"
        >
          Add a new box!
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`removing boxes matches snapshot after removing box 1`] = `
<div>
  <div>
    <div>
      <form>
        <div>
          <label
            for="newBox-height"
          >
            Height
          </label>
          <input
            id="newBox-height"
            name="height"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-width"
          >
            Width
          </label>
          <input
            id="newBox-width"
            name="width"
            value=""
          />
        </div>
        <div>
          <label
            for="newBox-backgroundColor"
          >
            Background Color
          </label>
          <input
            id="newBox-backgroundColor"
            name="backgroundColor"
            value=""
          />
        </div>
        <button
          class="NewBoxForm-addBtn"
        >
          Add a new box!
        </button>
      </form>
    </div>
  </div>
</div>
`;
